<resources>
    <string name="emailAccount" translatable="false">your@gmail.com</string>
    <string name="emailPassword" translatable="false">password</string>
    <string name="app_name">Puppies</string>
    <string name="author" translatable="false">seLu Ferrando</string>
    <string name="version" translatable="false">1.0</string>
    <string name="telephone" translatable="false">683 242 971</string>
    <string name="email" translatable="false">selu@selumobileapps.com</string>
    <string name="www" translatable="false">selumobileapps.com</string>
    <string name="tvName">Puppy</string>
    <string name="tvId" translatable="false">0000000000</string>
    <string name="tvRaiting" translatable="false">0</string>
    <string name="itemFavorites">Favorites</string>
    <string name="itemSettings">Set up account</string>
    <string name="itemContact">Contact</string>
    <string name="itemAbout">About</string>
    <string name="etName">Name:</string>
    <string name="etEmail" translatable="false">Email:</string>
    <string name="etMessage">Message:</string>
    <string name="btSend">Send Message</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="enterUsername">Enter your username</string>
    <string name="saveAccount">Save Account</string>
    <string name="sendingEmail">Sending Email</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="sentEmail">Email Sent</string>

</resources>
