<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.selumobileapps.puppies.MainActivity">
    <item android:id="@+id/itemFavorites"
        android:title="@string/itemFavorites"
        android:orderInCategory="100"
        android:icon="@drawable/star5"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/itemContact"
        android:title="@string/itemContact"
        android:orderInCategory="200"
        app:showAsAction="never"
        />
    <item android:id="@+id/itemAbout"
        android:title="@string/itemAbout"
        android:orderInCategory="300"
        app:showAsAction="never"
        />
</menu>