<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/padding_top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/version"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/itemContact"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/padding_top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/author"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:paddingTop="@dimen/padding_top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/telephone"
                android:id="@+id/textView6"
                android:paddingTop="@dimen/margin_top"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email"
                android:paddingTop="@dimen/margin_top"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/www"
                android:paddingTop="@dimen/margin_top"
                android:id="@+id/textView8"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>