<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/appBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include android:id="@+id/actionBar"
                 layout="@layout/action_bar">
        </include>

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/civProfile"
            android:layout_width="@dimen/circle_image"
            android:layout_height="@dimen/circle_image"
            android:src="@drawable/dogsilhouette"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/colorDivider"
            app:civ_shadow_radius="8.0"
            android:layout_marginTop="@dimen/padding_top"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:text="@string/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textViews"
            android:textAlignment="center"
            android:layout_below="@id/civProfile"
            android:id="@+id/tvFullName" />

        <TextView
            android:text="@string/tvId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textView"
            android:textAlignment="center"
            android:layout_below="@id/tvFullName"
            android:id="@+id/tvId" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tvId">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_weight="1"
                android:hint="@string/enterUsername">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/search48"
                android:id="@+id/ibSearch"
                android:layout_weight="0"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveAccount"
            android:theme="@style/MyButton"
            android:id="@+id/btSave"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorIcons" />
    </RelativeLayout>
</LinearLayout>